--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
       href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap"
       rel="stylesheet"
     />
+    <!-- Leaf API -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+    crossorigin=""/>
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+     integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+     crossorigin=""></script>
+
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
   </head>
 
@@ -29,22 +37,23 @@
         </div>
 
         <div class="colone">
-        <a><img id="tour_eiffel_img" src="images/tour_eiffel.jpg" alt="Tour Eiffel" /></a>
-        <a><img id="notre_dame_img" src="images/notre_dame.webp" alt="Notre-Dame de Paris" /></a>
-        <a><img id="arc_de_triomphe_img" src="images/arc_de_triomphe.webp" alt="Arc de triomphe" /></a>
-        <a><img id="mont_saint_michel_img" src="images/mont_saint_michel.jpg" alt="Mont saint michel"/></a>
-        <a><img id="versailles_img" src="images/versailles.webp" alt="Versailles" /></a>
+        <a><img id="img_tour_eiffel" src="images/tour_eiffel.jpg" alt="Tour Eiffel" /></a>
+        <a><img id="img_notre_dame" src="images/notre_dame.webp" alt="Notre-Dame de Paris" /></a>
+        <a><img id="img_arc_de_triomphe" src="images/arc_de_triomphe.webp" alt="Arc de triomphe" /></a>
+        <a><img id="img_mont_saint_michel" src="images/mont_saint_michel.jpg" alt="Mont saint michel"/></a>
+        <a><img id="img_versailles" src="images/versailles.webp" alt="Versailles" /></a>
         </div>
       
     </main>
     <footer>
       <div class="element-appear-left">
       <div id="affichage" class="footer">
-
-
-      </div>
+              </div>
     </div>
     </footer>
+    <div class="mapcontainer">
+    <div id="map"></div>
+  </div>
     
 
     <script type="text/javascript" src="script.js"></script>
