--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body>
     <header>
       <h1>LES MONUMENTS</h1>
-      <h5>Cliquez sur un monument ou sur son bouton pour obtenir une descritpion :</h5>
+      <h5>Cliquez sur un monument ou sur son bouton pour obtenir une description :</h5>
     </header>
     <main>
         <div class="colone">
@@ -43,18 +43,20 @@
         <a><img id="img_mont_saint_michel" src="images/mont_saint_michel.jpg" alt="Mont saint michel"/></a>
         <a><img id="img_versailles" src="images/versailles.webp" alt="Versailles" /></a>
         </div>
-      
     </main>
+
     <footer>
-      <div class="element-appear-left">
       <div id="affichage" class="footer">
-              </div>
-    </div>
+      <div class="element-appear-left">    
+          <div class="affichage-content">
+          </div>
+        </div>
+      </div>
     </footer>
+
     <div class="mapcontainer">
-    <div id="map"></div>
-  </div>
-    
+      <div id="map"></div>
+    </div>
 
     <script type="text/javascript" src="script.js"></script>
   </body>
